css/style.css
/* GENERAL */

* {
    box-sizing:border-box; 
    margin: 0; 
    padding: 0; 
}

body {
    font-family: 'Lato', sans-serif;
    color: white;
}

/* UTILITIES */

.red-text {
    color: red;
}

.green {
    color: #4bc800;
}

.grey-bg {
    background-color: #4a4a4a;
    padding: 0 30px;
}

/* HEADER */

header {
    height: 60px; 
    background-color: black; 
    display: flex;
    justify-content: flex-end;
    position: fixed;
    width: 100%;
}

.nav-options {
    font-size: 12px;
    margin-right: 5px;
    background-color: rgb(66, 66, 66);
    padding: 5px 5px;
    height: 40%;
    border-radius: 5px;
    margin-top: 5px;
}

/* MAIN */

main {
    background-color: black;
    overflow: auto;
    height: calc(100vh - 90px);
    padding-top: 60px;
}

#container-users {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#container-users img {
    margin: 3px 3px;
}


/* FOOTER */

footer {
    height: 90px;
    background-color: #222222;
    display: flex;
    justify-content:space-between;
    text-align: center;
    position: fixed;
    width: 100%;
}

.footer-elements {
    display: flex;
    margin-left: 10px;
    font-size: 14px;
    height: 100%;
    align-items: center;
    justify-content: center;
    }

footer .fas {
    font-size: 28px;
}

.options-footer {
    margin-right: 20px;
}

.arrow {
    align-self: center;
}

.options-footer .fa-angle-up {
    font-size: 14px;
    justify-content: center;
}

.options-footer .fa-user-plus {
    padding-left: 8px;
}

